# rust-warp-api

./: .gitignore  README.md
application_server/: Cargo.toml  restaurent.db
application_server/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
client_server/: Cargo.toml
client_server/src/: main.rs
