[package]
name = "simple_restaurant_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = "0.25"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

